# sol_os

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
