[package]
name = "sol_os"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-command = ["C:\\Program Files\\qemu\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.5.1"
pic8259 = "0.10.2"
spin = "0.9.4"
uart_16550 = "0.2.18"
volatile = "0.2"
x86_64 = "0.14.10"
